@@ -1,4 +1,4 @@
-/*	Original flava CSS for d-portal.org 2014 ^o^
+/*	Original CSS for d-portal.org 2014 ^o^
 	If you're reading this in github, 
 	please change to Tabs-4 as github is broken.
 	============================================= */
@@ -204,7 +204,7 @@ a.read:hover			{text-decoration:underline;}
 .list_stats_num				{display:block; font-size:2.9em; color:#FFF; line-height:0.8em;}
 a.button					{padding:10px 20px; background-color:#33A4FC; font-size:1.25em; color:#FFF; border-radius:0 0 8px 8px; display:block; max-width:320px; margin:0 auto; text-align:center;}
 a.button:hover				{background-color:#008FFF;}
-a.csv_download				{display:block; margin-top:20px; padding:10px 0; background-color:rgba(132,191,255,0.24); text-align:center; color:#ccc; margin-left:20px; margin-right:20px;}
+a.csv_download				{display:block; margin-top:20px; padding:10px 0; background-color:rgba(132,191,255,0.24); text-align:center; color:#ccc; border-radius:4px;}
 a.csv_download:hover		{background-color:rgba(115,182,255,0.49); color:#FFF;}
 	
 	
@@ -239,7 +239,9 @@ a.csv_download:hover		{background-color:rgba(115,182,255,0.49); color:#FFF;}
 
 /*	For url #view=search
 	============================================= */
-.search_label				{color:#FFF; border-bottom:1px solid #FFF;}
+input#view_search_string, input.typeahead.tt-hint		{color:#FFF;}
+.search_filter				{width:960px; margin:0 auto; padding:25px 18px 20px 18px; box-sizing:border-box; border:1px solid #FFF;}
+.search_label				{color:#FFF;}
 #search_div					{color:#FFF;}
 a#search_link				{background-color:rgba(0,14,32,0.7); color:#53B4ED;}
 a#search_link span			{color:#83AEC7;}
@@ -281,7 +283,7 @@ table.country td.name.publisher	{width:960px; max-width:960px; padding-right:0px
 table.country td.flag		{text-align:right;}
 table.country td.flag img	{max-height:90px;}
 table.country.min			{padding:10px 0;}
-table.country.min td.name	{width:860px; max-width:860px; padding-right:20px; font-size:2.0em; line-height:1.1em; color:#FFF;}
+table.country.min td.name	{width:860px; max-width:860px; padding-right:20px; font-size:2.0em; line-height:1.1em; color:#FFF; vertical-align:bottom;}
 table.country.min td.flag img	{max-height:50px;}
 table.country td:hover		{cursor:default;}
 table.country img			{-webkit-filter:brightness(100%); filter:brightness(100%);}
