@@ -1,7 +1,7 @@
 /* CSS for Search page */
 
-.typeahead, .tt-query, .tt-hint {width:396px; height:30px; padding:8px 12px; font-size:24px; line-height:30px; -webkit-border-radius:8px; -moz-border-radius:8px; border-radius:8px; outline:none;}
-.typeahead {background-color:#fff;}
+.typeahead, .tt-query, .tt-hint {width:396px; height:30px; padding:8px 12px; font-size:24px; line-height:30px; -webkit-border-radius:0; -moz-border-radius:0; border-radius:0; outline:none;}
+.typeahead, input {background-color:transparent !important; border-bottom:1px solid #fff !important; border-radius:0 !important; }
 .typeahead:focus {border:2px solid #0097cf;}
 .tt-hint {color:#999;}
 .tt-menu {width:100%; margin:12px 0; padding:8px 0; background-color:#fff;max-height:320px; overflow-y:auto;}
@@ -11,21 +11,24 @@
 .tt-suggestion.tt-cursor {color:#fff; background-color:#0097cf;}
 .tt-suggestion p {margin:0;}
 
+#result_span			{font-size:3em;}
+
 #view_search_test		{margin:0 auto; width:960px; padding:30px 0 400px 0;}
 input#view_search_string, input.typeahead.tt-hint		{font-size:32px; width:936px; height:48px; border:0; margin-top:10px;}
-.search_wrap			{display:inline-block; width:320px; margin-bottom:15px;}
-.search_label			{font-size:1.2em;padding-bottom:5px;margin-right:23px;margin-bottom:10px;}
-.search_label img		{padding-right:7px;width:17px;height:17px;}
+.search_wrap			{display:inline-block; width:290px; margin-bottom:15px;}
+.search_wrap:nth-child(2), .search_wrap:nth-child(5)	{margin-left:15px; margin-right:15px;}
+.search_label			{font-size:14px; padding-bottom:5px; margin-right:23px; line-height:1.2em; text-transform:uppercase;}
+.search_label img		{padding-right:7px;width:14px;height:14px;}
 
-.search_wrap .chosen-container{width:300px;min-width:300px;max-width:300px;}
+.search_wrap .chosen-container{width:290px; min-width:290px; max-width:290px;}
 
 .search_wrap.mini div#view_search_select_year_min_chosen,
-.search_wrap.mini div#view_search_select_year_max_chosen	{width:150px;min-width:150px;max-width:150px;}
+.search_wrap.mini div#view_search_select_year_max_chosen	{width:145px; min-width:145px;max-width:145px;}
 
 .tt-menu img			{width:16px; height:16px;}
 
-#search_div				{margin-top:20px;}
+#search_div				{position:relative; margin-top:30px; margin-bottom:20px;}
 #search_div span#search_span span	{display:block; padding-top:5px;}
 
-a#search_link			{display:block; text-align:center; margin:0 auto; font-size:1.6em; position:absolute; right:0; bottom:0; background-color:#172027; border-radius:0 8px 8px 0; height:64px; max-height:64px; box-sizing:border-box; padding:20px;}
+a#search_link			{display:block; text-align:center; margin:0 auto; font-size:1.6em; position:absolute; right:0; bottom:0; background-color:#172027; border-radius:6px; height:48px; max-height:48px; box-sizing:border-box; padding:12px 20px;}
 a#search_link span		{display:block; font-style:italic; font-size:0.6em; padding-top:5px;}
