@@ -67,8 +67,8 @@
 		</div>
 		<div class="title_info">Info</div>
 		<div class="subtitle_info">Dash is an overview of the data populating d-portal.org with a focus primarily on publisher statistics and the quality of the data reported by them. By showing you when and where invalid data is reported, Dash will be able to explain the gaps that are reflected on the main site.
-		<p>Click on any <b>Publisher Name</b> to go to their perspective publisher portal in a new window.</p>
-		<p>Click on any <b>Publisher ID</b> to view statistics for that publisher.</p>
+		<p>Click on a <b>Publisher Name</b> to view their profile in d-portal.org</p>
+		<p>Click on a <b>Publisher ID</b> to view their statistics in Dash.</p>
 		<p><i>Only activities with unique IDs are imported. Dash does not import duplicates.</i></p>
 		</div>
 		<p>Updates everyday GMT +0.</p> 
