@@ -75,7 +75,7 @@
 							<td>{dash_list_actdate_act_active}</td>
 						</tr>
 						<tr>
-							<td>Bad or missing dates so it can't be classified</td>
+							<td>Bad or missing dates so unclassified</td>
 							<td>{dash_list_actdate_act_missing}</td>
 						</tr>
 						<tr>
@@ -112,7 +112,7 @@
 		</table>	
 		<table class="pub dataset">
 			<tr>
-				<th>IATI Datasets <span class="note">Each dataset contains a number of activities. Links open external sites in new window.</span></th>
+				<th>IATI Datasets <span class="note">Each dataset contains a number of activities. Links direct to IATI Registry in new window.</span></th>
 				<th>Activities</th>
 			</tr>
 			{dash_list_slug_datas}
@@ -126,7 +126,7 @@
 							<td>
 								<div class="country_title">Total number of recipient countries:</div>
 								<div class="country_subtitle" title="{dash_quality_country_total_invalid_pct}%">Reporting {dash_quality_country_total_invalid} instances of invalid recipients.</div>
-								<div class="note div">Click to view all activities reported per country for this publisher. Links open new window.</div>
+								<div class="note div">Click to view all activities reported per country for this publisher in XML. Links open new window.</div>
 							</td>
 							<td><div class="country_title">{dash_quality_country_count}</div></td>
 						</tr>
