@@ -1,3 +1,10 @@
+Development Portal (2016-06-14 shi)
+==============================
+Fixed table CSS for Print-friendly
+Fixed portal name vertical align with flag (min)
+Search layout redesign
+
+
 Development Portal (2016-05-31 shi)
 ==============================
 Change layout of Search button
